fix: updating to DuckDB LTS version